Bug 418108 - Additional dictionary filenames removed by configuration window.
Summary: Additional dictionary filenames removed by configuration window.
Status: RESOLVED FIXED
Alias: None
Product: kiten
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.12
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Joseph Kerian
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-23 21:51 UTC by A. Kastner
Modified: 2021-01-19 20:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description A. Kastner 2020-02-23 21:51:27 UTC
SUMMARY
When changing kiten's configuration through the configuration window, the filenames of all manually added dictionaries are removed on clicking 'OK', rendering the manually added dictionaries unusable.

STEPS TO REPRODUCE
1. Manually add a dictionary file to Kiten using the 'Settings'->'Configure Kiten...' window. The filenames are now stored to $HOME/.config/kitenrc . If the dictionary file has the correct format, it can be used.
2. Open the 'Settings'->'Configure Kiten...' window again. The list of dictionaries still contains the names of the dictionaries, but not their filenames.
3. Exit the configuration window by clicking 'OK', possibly after changing settings.

OBSERVED RESULT
The dictionary filenames are removed from the configuration file $HOME/.config/kitenrc and the dictionaries can no longer be searched by Kiten.

EXPECTED RESULT
The filenames should still be present and the manually added dictionaries should stay usable.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon 5.18
(available in About System)
KDE Plasma Version: 5.18.1
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Comment 1 Bug Janitor Service 2021-01-17 19:43:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/kiten/-/merge_requests/14
Comment 2 Frédéric Brière 2021-01-19 20:44:22 UTC
Git commit 59979083e8c9d5e2e40451f171fab7290881bb20 by Frédéric Brière.
Committed on 19/01/2021 at 00:43.
Pushed by aacid into branch 'master'.

Fix addItem() group name in ConfigDictionarySelector::updateWidgets()

M  +3    -2    app/configdictionaryselector.cpp

https://invent.kde.org/education/kiten/commit/59979083e8c9d5e2e40451f171fab7290881bb20
Comment 3 Albert Astals Cid 2021-01-19 20:45:26 UTC
Git commit 47c688fa73badf22248580b5e9d3ef7e10493216 by Albert Astals Cid, on behalf of Frédéric Brière.
Committed on 19/01/2021 at 20:45.
Pushed by aacid into branch 'release/20.12'.

Fix addItem() group name in ConfigDictionarySelector::updateWidgets()
(cherry picked from commit 59979083e8c9d5e2e40451f171fab7290881bb20)

M  +3    -2    app/configdictionaryselector.cpp

https://invent.kde.org/education/kiten/commit/47c688fa73badf22248580b5e9d3ef7e10493216