Fix addItem() group name in ConfigDictionarySelector::updateWidgets()

BUG: 418108
(cherry picked from commit 59979083e8c9d5e2e40451f171fab7290881bb20)